<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            android:id="@+id/input_CustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/tipForCustomerToEnterName"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/label_Toppings"
            style="@style/HeaderTextStyle"
            android:layout_margin="8sp"
            android:layout_weight="0"
            android:text="@string/labelTextForToppings" />

        <CheckBox
            android:id="@+id/checkBox_addWhippedCream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="0"
            android:onClick="addToppings"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBox_addChocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="0"
            android:onClick="addToppings"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/label_Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="0"
            android:text="@string/labelTextForQuantity"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_Minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"
                android:textSize="16sp"
                android:textColor="@color/icons"/>

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_Plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"
                android:textSize="16sp"
                android:textColor="@color/icons"/>
        </LinearLayout>

        <TextView
            android:id="@+id/label_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="0"
            android:labelFor="@+id/label_Price"
            android:text="@string/labelTextForPrice"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/summaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_weight="0"
            android:text="-"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_SubmitOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:onClick="submitOrder"
            android:text="@string/buttonTextForOrder"
            android:textSize="16sp"
            android:textColor="@color/icons"/>

    </LinearLayout>
</ScrollView>